<resources>
    <string name="app_name">WorkOut</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="home_workout">Home Workout</string>
    <string name="gym_workout">Gym Workout</string>
    <string name="select_workout_type">Select You WorkoutType</string>
    <string name="ft">ft</string>
    <string name="m">m</string>
    <string name="height">Height</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="weight">Weight</string>
    <string name="let_us_know_you_better">Let us know you better</string>
    <string name="your_day_to_day_activity_level">Your day to day activity level?</string>
    <string name="select_focus_area">Select focus area.</string>
    <string name="select_your_gender">Select your Gender?</string>
    <string name="what_are_your_main_goals">What are your main goals?</string>
    <string name="image">Image</string>
    <string name="nestscroll">nestScroll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="levelofactivity">
        <item>Sedentary (little or no exercise)</item>
        <item>Lightly active (exercise 1–3 days/week)</item>
        <item>Moderately active (exercise 3–5 days/week)</item>
        <item>Active (exercise 6–7 days/week)</item>
        <item>Very active (hard exercise 6–7 days/week)</item>
    </string-array>
    <string-array name="outactivity">
        <item>💃 Aerobics (MET 6.83)</item>
        <item>⛹ Baseball, softball (MET 5)</item>
        <item>⛹ Basketball (MET: 8)</item>
        <item>🎱 Billiards (MET: 2.5)</item>
        <item>🎳 Bowling (MET: 3)</item>
        <item>🔗 Climbing, spelunking, caving (MET: 8)</item>
        <item>🚲 Cycling (MET: 9.5)</item>
        <item>💃 Dancing (MET: 4.5)</item>
        <item>🏇 Equestrian sports (MET: 5.33)</item>
        <item>⚔ Fencing (MET: 6)</item>
        <item>🎣 Fishing (MET: 4.5)</item>
        <item>🏈 Football (american) (MET: 8)</item>
        <item>⚽ Football (soccer) (MET: 7)</item>
        <item>⛳ Golfing (MET: 3.75)</item>
        <item>🎽 Gymnastics (MET: 4)</item>
        <item>⛰ Hiking (MET: 6)</item>
        <item>🐧 Hockey (MET: 8)</item>
        <item>⛸ Ice skating (MET: 7)</item>
        <item>🏄 Kitesurfing, windsurfing (MET: 11)</item>
        <item>🙏 Martial arts (MET: 10)</item>
        <item>🎾 Racquet sports (MET: 8.5)</item>
        <item>Rollerblading (MET: 6)</item>
        <item>⛵ Rowing (MET: 4.64)</item>
        <item>🏉 Rugby (MET: 10)</item>
        <item>🏃 Running (MET: 9.8)</item>
        <item>🏩 Sex (MET: 5.8)</item>
        <item>⛷ Skiing, snowboarding (MET: 7)</item>
        <item>💤 Sleeping (MET: 1)</item>
        <item>🧍 Standing (MET: 1.5)</item>
        <item>🏊 Swimming (MET: 8)</item>
        <item>❤ Using cardiovascular equipment (MET: 8)</item>
        <item>✋ Volleyball (MET: 5.5)</item>
        <item>🚶 Walking (MET: 3.8)</item>
        <item>📺 Watching tv (MET: 1)</item>
        <item>🐬 Water sports (MET: 5.22)</item>
        <item>💪 Weightlifting/strength training (MET: 3)</item>
        <item>👐 Wrestling (MET: 6)</item>
        <item>🌇 Yoga (MET: 3)</item>
    </string-array>
    <string-array name="time">
        <item>12:00 AM</item>
        <item>12:15 AM</item>
        <item>12:30 AM</item>
        <item>12:45 AM</item>
        <item>1:00 AM</item>
        <item>1:15 AM</item>
        <item>1:30 AM</item>
        <item>1:45 AM</item>
        <item>2:00 AM</item>
        <item>2:15 AM</item>
        <item>2:30 AM</item>
        <item>2:45 AM</item>
        <item>3:00 AM</item>
        <item>3:15 AM</item>
        <item>3:30 AM</item>
        <item>3:45 AM</item>
        <item>4:00 AM</item>
        <item>4:15 AM</item>
        <item>4:30 AM</item>
        <item>4:45 AM</item>
        <item>5:00 AM</item>
        <item>5:15 AM</item>
        <item>5:30 AM</item>
        <item>5:45 AM</item>
        <item>6:00 AM</item>
        <item>6:15 AM</item>
        <item>6:30 AM</item>
        <item>6:45 AM</item>
        <item>7:00 AM</item>
        <item>7:15 AM</item>
        <item>7:30 AM</item>
        <item>7:45 AM</item>
        <item>8:00 AM</item>
        <item>8:15 AM</item>
        <item>8:30 AM</item>
        <item>8:45 AM</item>
        <item>9:00 AM</item>
        <item>9:15 AM</item>
        <item>9:30 AM</item>
        <item>9:45 AM</item>
        <item>10:00 AM</item>
        <item>10:15 AM</item>
        <item>10:30 AM</item>
        <item>10:45 AM</item>
        <item>11:00 AM</item>
        <item>11:15 AM</item>
        <item>11:30 AM</item>
        <item>11:45 AM</item>
        <item>12:00 PM</item>
        <item>12:10 PM</item>
        <item>12:15 PM</item>
        <item>12:30 PM</item>
        <item>12:45 PM</item>
        <item>1:00 PM</item>
        <item>1:15 PM</item>
        <item>1:30 PM</item>
        <item>1:45 PM</item>
        <item>2:00 PM</item>
        <item>2:15 PM</item>
        <item>2:30 PM</item>
        <item>2:45 PM</item>
        <item>3:00 PM</item>
        <item>3:15 PM</item>
        <item>3:30 PM</item>
        <item>3:45 PM</item>
        <item>4:00 PM</item>
        <item>4:15 PM</item>
        <item>4:30 PM</item>
        <item>4:45 PM</item>
        <item>5:00 PM</item>
        <item>5:15 PM</item>
        <item>5:30 PM</item>
        <item>5:45 PM</item>
        <item>6:00 PM</item>
        <item>6:15 PM</item>
        <item>6:30 PM</item>
        <item>6:45 PM</item>
        <item>7:00 PM</item>
        <item>7:15 PM</item>
        <item>7:30 PM</item>
        <item>7:45 PM</item>
        <item>8:00 PM</item>
        <item>8:15 PM</item>
        <item>8:30 PM</item>
        <item>8:45 PM</item>
        <item>9:00 PM</item>
        <item>9:15 PM</item>
        <item>9:30 PM</item>
        <item>9:45 PM</item>
        <item>10:00 PM</item>
        <item>10:15 PM</item>
        <item>10:30 PM</item>
        <item>10:45 PM</item>
        <item>11:00 PM</item>
        <item>11:15 PM</item>
        <item>11:30 PM</item>
        <item>11:45 PM</item>
    </string-array>
    <string-array name="sleep_time">
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
    </string-array>
    <string-array name="activity_level">
        <item>Little/No exercise</item>
        <item>Exercise 1–2 times/week</item>
        <item>Exercise 2–3 times/week</item>
        <item>Exercise 3–5 times/week</item>
        <item>Exercise 6–7 times/week</item>
        <item>Professional athlete</item>
    </string-array>
    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="cm_in">
        <item>cm</item>
        <item>inches</item>
    </string-array>
    <string-array name="BMI_calculation">
        <item>Metric BMI</item>
        <item>English BMI (Imperial)</item>
    </string-array>
</resources>