<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.WeightHeightFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_weightHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_us_know_you_better"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/view_View"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/title_weightHeight"/>

    <TextView
        android:id="@+id/title_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@id/view_View"/>
    <LinearLayout
        android:id="@+id/input_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/title_weight">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightInputLayout"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weightTextField"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/selecterHolder"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/kg"
            android:background="@drawable/radio_bg"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/kg"
                android:layout_margin="1dp"
                android:background="@drawable/radio_selected_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/kg"
                android:textColor="@color/black"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:id="@+id/lb"
                android:background="@drawable/radio_selected_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/lb"
                android:textColor="@color/black"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/title_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/input_weight"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/title_height">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/heightInputLayout1"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heightTextField1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/heightInputLayout2"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heightTextField2"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/selectorHolder"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/mt"
            android:background="@drawable/radio_bg"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/mt"
                android:layout_margin="1dp"
                android:background="@drawable/radio_selected_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="@color/black"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:id="@+id/ft"
                android:background="@drawable/radio_selected_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/ft"
                android:textColor="@color/black"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/final_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>