<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filter.WorkoutTypeFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_workout_type"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_margin="10dp"/>
    <RelativeLayout
        android:id="@+id/relative_home_workout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/workout_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/home_workout" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:text="@string/home_workout"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_gym_workout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/workout_gym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true"
            android:contentDescription="@string/gym_workout" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:text="@string/gym_workout"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </RelativeLayout>
</LinearLayout>