<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".filter.GenderFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_gender"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/male_Cardview"
            android:layout_width="0dp"
            app:cardElevation="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2196F3"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp"
                    android:layout_marginTop="10dp"
                    app:cardElevation="5dp">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_outline_male_24"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/female_Cardview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E91E63"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp"
                    android:layout_marginTop="10dp"
                    app:cardElevation="5dp">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ic_baseline_female_24"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <Button
        android:id="@+id/moveToNext"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>